@startuml
skinparam nodesep 10

package std {
class set {
 union()
 intersection()
 difference()
 symmetric_difference()
}
class "subprocess" as sc {
   + call()
}
}

package purrsync {
class FileSet {
 - File: file
 - Path: root
 - Method: updateFunc
 + setRoot(Path: root)
 + getRoot()
 + readFile()
 + writeFile()
 + updateSet()
}
sc <.. FileSet : call
set <|-- FileSet

class Rsync {
 - FileSet: mainSet
 - FileSet: ignoreSet
 - FileSet: packageSet
 - FileSet: orphanSet
 - Path: rsync
 - List: rsyncArgs
 + rsync(Str: rsyncArgs)
 + rsync()
 + rsyncMain()
 + rsyncPackage(Str: PackageName)
}
sc <.. Rsync : call

Rsync "1" o- "1" FileSet : mainSet
Rsync "1" o- "1" FileSet : ignoreSet
Rsync "1" o- "n" FileSet : packageSet
Rsync "1" o- "1" FileSet : orphanSet
}

@enduml
